# proteomics-wizard

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: docker-publish.yml
proteomics_app/: __init__.py  app.py
proteomics_app/pipeline/: __init__.py  io.py  runner.py
proteomics_app/saved_runs/2026-01-04_204938_proteomics/: manifest.json
proteomics_app/saved_runs/2026-01-04_204938_proteomics/outputs/: merged_log2fc.xlsx  merged_log2fc_results.xlsx
proteomics_app/steps/: __init__.py  compile_data.py  peptide_search.py  splitting.py  stereoselectivity.py
proteomics_app/viewer/: __init__.py  chrom_viewer.py  stats_viewer.py
runs/2026-01-04_190447_proteomics/outputs/: merged_log2fc.xlsx  merged_log2fc_results.xlsx  merged_log2fc_results_sites.xlsx
runs/2026-01-04_190447_proteomics/uploads/: MS2_30s.csv  MS3_0s.csv  peptide_list_MS2.txt
runs/2026-01-04_202115_proteomics/outputs/: merged_log2fc.xlsx  merged_log2fc_results.xlsx  merged_log2fc_results_sites.xlsx
runs/2026-01-04_202115_proteomics/uploads/: MS2_5s.csv  MS3_peaks_report.csv  combined_peptide_MS2.tsv  combined_peptide_MS3.tsv
runs/2026-01-04_204938_proteomics/outputs/: merged_log2fc_results_sites.xlsx
runs/2026-01-04_204938_proteomics/uploads/: MS2_peaks_report.csv  MS3_30s.csv  MS3_5s.csv  peptide_list_MS3.txt
